# equity-research-system

./: .env.example  .gitignore  .mcp.json  BUILD_LOG.md  CLAUDE.md  README.md  STAKEHOLDERS.md  docker-compose.yml  pytest.ini  requirements.txt
.claude/: README.md  settings.json
.claude-plugin/: plugin.json
.claude/agents/: bear-case.md  bear-case.md.removed-20260512  catalyst-scout.md  cdd-lead.md  company-deep-dive.md  evaluator.md  flow-overlay.md  mean-reversion-overlay.md  pm-supervisor.md  quantitative-analyst.md  search-agent.md  strategic-analyst.md  tactical-overlay.md
.claude/commands/: ack.md  backtest.md  brief-delta-sweep.md  calibration-status.md  cdd-test.md  checkpoint.md  daily-monitor.md  disposition.md  entry-check.md  evaluate.md  exit-check.md  grill-me.md  in-session-monitor.md  macro-cycle.md  micro.md  parameters-review.md  quarterly-reunderwrite.md  research-company.md  resolve-outcomes.md  review-me.md  run.md  spec-approve.md  system-health.md  walkforward-tune.md  wash-sale-harvest.md  weekly-buildlog.md
.claude/references/: base_rates_cohort_refined.json  canonical-frameworks.md  contamination-check.md  daily-monitor-tier-routing.md  evidence-index-schema.md  exit-triggers.md  gold_standard_2026Q2.json  gold_standard_template.json  mcp-required.md  position-sizing-formula.md  prediction-resolution.md  process-rubric.md  research-sources-catalog.md  wash-sale-paths.md
.github/workflows/: ci.yml
.kiro/steering/: roadmap.md
archive/_retired/src/backtesting/: README.md  framework.py  pyproject.toml  results.py
dashboard/: index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
dashboard-src/: App.tsx  LivePanel.tsx
dashboard/src/: App.tsx  GatesView.tsx  LivePanel.tsx  RunsView.tsx  gates.ts  memos.ts  runs.ts  styles.css
db/: README.md
db/init/: 01-extensions.sql
db/migrations/: 001_evidence_index.sql  002_predictions.sql  003_counterfactual_ledger.sql  004_v3_parameters.sql  005_v3_regime.sql  006_v3_scenarios.sql  007_v3_watchlist_positions.sql  008_v3_recommendations.sql  009_v3_daily_monitor.sql  010_v3_drift_detection.sql  011_v3_counterfactual_retrieval.sql  012_v3_premortem.sql  013_v3_calibration_capture.sql  014_v3_system_health.sql  015_v3_calibration_test_results.sql  016_v3_hmac_columns.sql  017_v3_alert_type_extension.sql  018_v3_forced_review_blocked_pending.sql  019_v3_first_acquired_nullable.sql  020_v3_bocpd_short_run_mass.sql  021_v3_dimension_name_rename.sql  022_v3_idempotency.sql  023_v3_launch_readiness_log.sql  (+32 more)
docs/: big-finance-comparison.md  decision-7-sweep-set.md  exploration-systematic-flow-architecture-2026-05-28.md  g_check_4_verification_spec.md  harness-reference.md  high-4-enum-drift-consensus.md  implementation-sequencing.md  parameter-review-queue.md  phase_1_acceptance_spec.md  phase_gates.md  phasing-plan.md  research-walkforward-tuning-loop-2026-05-29.md  section-1-consensus.md  section-2-consensus.md  section-3-consensus.md  section-4-consensus.md  section-5-consensus.md  section-7-consensus.md  tier4-deferred-work.md  v2-final-spec.md  v2-orchestrator-refactor-consensus.md
provider_verification/: README.md  anthropic.md  broker_schwab.md
scripts/: append_escalate_resolution.py  audit_run.sh  backtest_reversion.py  compare_sweeps.sh  hook_smoke_test.sh  monitor_sweep_run.sh  persist_watchlist_2026_05_06.py  post_agent_validate.sh  reconcile_orphan_snapshots.sh  research_company_as_of_tag_gate.sh  sign_sweep_tag.sh  snapshot_for_standalone.sh  validate_envelope.sh
src/: README.md
src/mcp/broker/: README.md  config.py  core.py  gate_client.py  mappers.py  models.py  paper.py  pyproject.toml  server.py  symbol_cache.py  validation.py
src/mcp/broker_mcp/: README.md  diff_engine.py  oauth.py  pyproject.toml  schwab_adapter.py
src/mcp/broker_mcp/adapters/: __init__.py  base.py
src/mcp/contamination_check/: DESIGN.md  README.md  pyproject.toml  server.py
src/mcp/edgar/: README.md  pyproject.toml  server.py
src/mcp/fred/: README.md  pyproject.toml  server.py
src/mcp/fundamentals/: README.md  pyproject.toml  server.py
src/mcp/macro_stack/: README.md  pyproject.toml  server.py
src/mcp/market_data/: README.md  polygon_provider.py  pyproject.toml  server.py
src/mcp/massive/: README.md  pyproject.toml  server.py  smoke_test.py
src/mcp/polygon/: README.md  pyproject.toml  server.py
src/mcp/postgres/: README.md  pyproject.toml  server.py
src/mcp/yfinance/: README.md  pyproject.toml  server.py
src/regime_sidecar/: README.md  __init__.py  bma.py  bocpd.py  classifier.py  cli.py  forbes_rigobon.py  fred_client.py  persistence.py  pyproject.toml  types.py
src/regime_sidecar/dimensions/: __init__.py  dim1_credit_ebp.py  dim2_cycle_ntfs.py  dim3_vol_vrp.py  dim4_mp_liquidity.py  dim5_dollar.py  dim6_stock_bond_corr.py
tests/: conftest.py  test_agent_harness_dispatcher.py  test_agent_harness_envelopes_catalyst.py  test_agent_harness_envelopes_flow.py  test_agent_harness_envelopes_quantitative.py  test_agent_harness_envelopes_strategic.py  test_agent_harness_envelopes_tactical.py  test_alert_channels.py  test_analog_retirement_narrative_only.py  test_audit_trail.py  test_backtesting.py  test_broker_mcp.py  test_calibration_believability.py  test_calibration_brier.py  test_calibration_harness.py  test_cold_start_walkthrough.py  test_contamination_check.py  test_continuous_conviction.py  test_conviction_rollup_cli.py  test_counterfactual_veto.py  test_crwd_backtest_replay.py  test_datetime_audit_regression.py  test_disposition_view.py  test_e2e_integration.py  test_edgar.py  test_envelope_shape.py  test_error_swallow_audit.py  test_evaluator_gates_catalyst_modifier_composition_check.py  test_evaluator_gates_crowding_composition_check.py  test_evidence_uuid_check.py  test_flow_overlay_agent_md_migration_consistency.py  test_frameworks_cited_shim.py  test_fred.py  test_hmac_integration.py  test_l4_daily_monitor.py  test_live_db_smoke.py  test_live_db_smoke_extended.py  test_market_data.py  test_market_data_polygon_dispatch.py  test_mode_classifier.py  (+37 more)
(+861 files in other folders)
