[project]
name = "equity-research-regime-sidecar"
version = "0.1.0"
description = "S0 regime sidecar — daily 6-dimension regime classification + BOCPD per v3 spec §4.1."
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "httpx>=0.27",
    "psycopg[binary]>=3.2.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
regime-sidecar = "src.regime_sidecar.cli:main"
