[project]
name = "broker-mcp"
version = "0.1.0"
description = "Gate TradFi CFD execution adapter MCP. Leaf-level, most-conservative venue node (P7): validates and rejects, never sizes/scores/upsizes. v0.1 paper-only — no live real-money path enabled. Exposes BUY/HOLD/TRIM/SELL → venue-action mapping both as MCP tools (Claude seam) and importable leaf functions (execution-daemon, in-process)."
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.uv]
package = false
