[project]
name = "equity-research-broker-mcp"
version = "0.1.0"
description = "Broker MCP server (read-only) for the equity research system. Schwab default; pluggable adapter base for IBKR/Fidelity at v0.5+."
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["broker_mcp*"]
