[project]
name = "equity-research-edgar-mcp"
version = "0.1.0"
description = "SEC EDGAR MCP server for the equity research system. Thin HTTP wrapper over data.sec.gov; decision-6 typed capability consumed by CompanyDeepDive."
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = ["pytest>=8.0"]
