[project]
name = "polygon-mcp"
version = "0.1.0"
description = "Polygon options-chain MCP for CatalystScout positioning analytics"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "polygon-api-client>=1.13.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.uv]
package = false
